# BlowChain

./: .gitignore  README.md  macs_n_gatts.txt
nodes/brain/: prj.conf
nodes/brain/boards/: nrf52840dk_nrf52840.overlay
nodes/brain/include/: lock.h
nodes/brain/src/: lock.c  main.c
nodes/pc/: lockbox_client.py  main.py  recon_central.py  tago_pipe.py
nodes/sense_human/: CMakeLists.txt  prj.conf
nodes/sense_human/include/: bluetooth_thingy.h  led_lib.h  new_sensor_lib.h
nodes/sense_human/src/: bluetooth_thingy.c  led_lib.c  main.c  new_sensor_lib.c
nodes/sense_tamper/: CMakeLists.txt  prj.conf
nodes/sense_tamper/boards/: disco_l475_iot1.overlay
nodes/sense_tamper/include/: bluetooth_disco.h  new_sensor_lib.h
nodes/sense_tamper/src/: bluetooth_disco.c  main.c  new_sensor_lib.c
nodes/touchpad/: CMakeLists.txt  m5stack_core2.overlay  prj.conf
nodes/touchpad/src/: main.c
reference_code/niall/HTTP_rest_board/: CMakeLists.txt  prj.conf
reference_code/niall/disco_to_tago/: prj.conf
reference_code/niall/p1/: README.md
reference_code/niall/p2/: README.md
reference_code/niall/p2/t4/tapp/: CMakeLists.txt  prj.conf
reference_code/niall/p2/t7/tapp/: CMakeLists.txt  prj.conf
reference_code/niall/p3_me/base/: CMakeLists.txt
reference_code/niall/p3_me/base/include/: shell.h
reference_code/niall/p3_me/base/src/: broadcaster.c  controller.c  observer.c  shell.c
thingy_relevant/: bluetooth_thingy.c  bluetooth_thingy.h
wiki_assets/files/: LockBox.drawio  LockBox_solid.drawio  poster_template.pptx  treasure.docx
(+90 files in other folders)
